unified_tests/interfaces/unknown_interface_in_implements/expect/build.text.stderr
lib.copp:1:22: error: unknown type 'Missing'
  type User implements Missing :: struct {
                       ^
